Show/Hide Clear highlight

--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
     "menus",
     "mozillaAddons",
     "tabs",
-    "scripting"
+    "scripting",
+    "webNavigation"
   ],
 
   "web_accessible_resources": [
